Changes the bounds being sent for occlusion from physical pixels to DIP

Occlusion::GetUnoccludedContentRect() applies a draw transform to the
bounds being sent. This draw transform already has the scaling applied
to it which causes the physical pixel bounds to be scaled again
leading to an incorrect visible rect result.

Also adds unittest to check for this scenario in the future.

BUG=660744
COMPONENT=CC, Layer, Surface Layer Impl
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2673813002
Cr-Commit-Position: refs/heads/master@{#449755}

Former-commit-id: 9c7c49cb95b000cdaef78de90eb6a3cd46c663f9